# traffic-video-vqa-pipelines

./: .gitignore  README.en.md  README.md  README.vi.md  pyproject.toml  requirements.txt
configs/: default.yaml  kaggle_train3.yaml
constraints/: kaggle-cu124.txt
notebooks/: original_kaggle_notebook.ipynb  vqa.ipynb  yolo26.ipynb
scripts/: bootstrap_kaggle.sh  doctor_kaggle.py  run_kaggle_train3.sh
src/refactor/: __init__.py  kaggle_environment.py  micro_hint_pipeline.py  mixed_training.py  pipeline_comparison.py  qwen_model.py  rag_retrieval.py  run_vqa.py  run_yolo26.py  traffic_sign_vqa.py  translation_utils.py  videoqa_preprocess.py  vlm_inference.py  yolo26_config.py  yolo26_dataset.py  yolo26_train.py
src/traffic_video_vqa/: __init__.py  cli.py  compat.py  data.py  inference.py  pipelines.py  training.py  video.py
src/zalo_traffic_vqa/: __init__.py  cli.py  config.py  preprocess.py  rag.py  translation.py
