[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-video-vqa"
version = "0.1.0"
description = "Modular traffic video QA pipelines from the original Kaggle notebook."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "huynguyenquang-collab"}]
dependencies = [
  "numpy",
  "pyyaml",
  "tqdm",
  "pillow",
  "opencv-python",
  "torch",
  "transformers",
  "datasets",
  "rank-bm25",
  "deep-translator",
  "ultralytics",
  "trl",
]

[project.optional-dependencies]
finetune = [
  "unsloth",
  "triton",
  "tokenizers",
]
dev = [
  "ruff>=0.5",
  "pytest>=8.0",
]

[project.scripts]
traffic-vqa = "traffic_video_vqa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
